--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <canvas id="myCanvas" width="300" height="300"></canvas>
     <script src="main.js" charset="utf-8"></script>
+    <script src="car.js" charset="utf-8"></script>
   </body>
 </html>
