--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <canvas id="myCanvas" width="300" height="300"></canvas>
     <script src="main.js" charset="utf-8"></script>
     <script src="car.js" charset="utf-8"></script>
+    <script src="controls.js" charset="utf-8"></script>
   </body>
 </html>
