--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <canvas id="myCanvas" width="300" height="300"></canvas>
+    <canvas id="myCanvas"></canvas>
     <script src="main.js" charset="utf-8"></script>
     <script src="car.js" charset="utf-8"></script>
     <script src="controls.js" charset="utf-8"></script>
