--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <canvas id="myCanvas"></canvas>
 
+    <script src="road.js" charset="utf-8"></script>
     <script src="controls.js" charset="utf-8"></script>
     <script src="car.js" charset="utf-8"></script>
     <script src="main.js" charset="utf-8"></script>
