--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <canvas id="myCanvas"></canvas>
+    <script src="sensor.js" charset="utf-8"></script>
     <script src="utils.js" charset="utf-8"></script>
     <script src="road.js" charset="utf-8"></script>
     <script src="controls.js" charset="utf-8"></script>
