--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <canvas id="myCanvas"></canvas>
+    <canvas id="carCanvas"></canvas>
+    <canvas id="networkCanvas"></canvas>
     <script src="network.js" charset="utf-8"></script>
     <script src="sensor.js" charset="utf-8"></script>
     <script src="utils.js" charset="utf-8"></script>
