Add neural network visualization

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <canvas id="carCanvas"></canvas>
     <canvas id="networkCanvas"></canvas>
+    <script src="visualizer.js" charset="utf-8"></script>
     <script src="network.js" charset="utf-8"></script>
     <script src="sensor.js" charset="utf-8"></script>
     <script src="utils.js" charset="utf-8"></script>
