--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <canvas id="carCanvas"></canvas>
+    <div id="verticalButtons">
+      <button onclick="save()">Save Best Brain</button>
+      <button onclick="discard()">Discard Best Brain</button>
+    </div>
     <canvas id="networkCanvas"></canvas>
     <script src="visualizer.js" charset="utf-8"></script>
     <script src="network.js" charset="utf-8"></script>
