--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="verticalButtons">
       <button onclick="save()">Save Best Brain</button>
       <button onclick="discard()">Discard Best Brain</button>
+      <button onclick="addTraffic()">Add Traffic</button>
     </div>
     <canvas id="networkCanvas"></canvas>
     <script src="visualizer.js" charset="utf-8"></script>
